fix overlapping bug

--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100%;
     padding-bottom: 100px;
-    padding-top: 90px;
+    padding-top:38px;
 }
 .image-button{
     position: absolute;
@@ -22,6 +22,7 @@
 .content{
     padding-left: 0;
     padding-right: 0;
+    padding-top:52px;
 }
 #actors-section{
     background: #E74C3C;
